실습 예제/service_blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-Service
  labels:
    project: blue
spec:
  type: ClusterIP
  selector:
    app: blue-app
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-Deployment
  labels:
    project: blue
spec:
  selector:
    matchLabels:
      app: blue-app
  replicas: 3
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - name: blue-app
        image: yoonjeong/blue-app:1.0
        ports:
        - port: 80
          targetPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
