실습 예제/service_green.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-Service
  labels:
    project: green
spec:
  type: ClusterIP
  selector:
    app: green-app
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-Deployment
  labels:
    project: green
spec:
  selector:
    matchLabels:
      app: green-app
  replicas: 3
  template:
    metadata:
      labels:
        app: green-app
    spec:
      containers:
      - name: green-app
        image: yoonjeong/green-app:1.0
        ports:
        - port: 80
          targetPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
