실습 예제/service_red.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-Service
  labels:
    project: red
spec:
  type: ClusterIP
  selector:
    app: red-app
  ports:
  - port: 80
    targetPort: 8080

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: red-Deployment
  labels:
    project: red
spec:
  selector:
    matchLabels:
      app: red-app
  replicas: 3
  template:
    metadata:
      labels:
        app: red-app
    spec:
      containers:
      - name: red-app
        image: yoonjeong/red-app:1.0
        ports:
        - port: 80
          targetPort: 8080
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
